--- a/High-Drop-Nav.css
+++ b/High-Drop-Nav.css
@@ -1,102 +1,87 @@
-/* ---------------resetting */
-*{
-     margin: 0;
-     padding: 0;
-}
 body{
      background-color: deeppink;
-     font-family: sans-serif;
-     user-select: none;
 }
-/* **********************************
-.                              NAVBAR
-********************************** */
+/* **********************navbar */
 nav{
      position: fixed;
-     top: 0;
-     left: 0;
-
+     display: flex;
      height: 100%;
      width: 65%;
-
-     display: flex;
      align-items: center;
      justify-content: center;
 }
 nav ul{
      width: 80%;
+     list-style-type: none;
+     letter-spacing: 2px;
+     line-height: 2;
+     font-weight: bolder;
+     color: #fff;
 }
 nav ul li{
-     list-style-type: none;
-     line-height: 2;
-     letter-spacing: 2px;
-     padding-left: 30%;
-
-     color: #fff;
-     text-transform: uppercase;
-     font-weight: bolder;
+     font-family: tahoma;
+     cursor: pointer;
+     transition: 0.7s ease;
 }
-/* --------------------------------HAMBURGER */
-
-.hamburger{
-     width: 50px;
-     position: absolute;
-     top: 0px;
-     left: 0px;
-     background-color: deeppink;
-     z-index: 2;
+nav ul li:hover{
+     color: black;
+     font-size: 1.3em;
 }
-.hamburger::before,
-.hamburger::after,
-.hamburger > div{
-     content: "";
-     display: block;
-
-     height: 5px;
-     margin: 7px;
-
-     background-color: white;
-     border-radius: 10px;
-     transition: 0.4s ease;
-}
-     nav.active ~ .hamburger::before{
-     transform: translateY(12px) rotate(315deg);
-}
-     nav.active ~ .hamburger::after{
-     transform: translateY(-12px) rotate(-315deg);
-}
-     nav.active ~.hamburger > div{
-     transform: scale(0);
-}
-
-/* ***********************************
-.                         CONTAINER
-*********************************** */
+/* ********************container */
 .container{
      background-color: #fff;
-     position: fixed;
+     position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      padding: 4rem;
      overflow: auto;
-     transition: 0.2s ease;
-     z-index: 1;
+     transition: 0.4s ease;
 }
+/* *******************hamburger */
+.hamburger{
+     width: 50px;
+     position: absolute;
+     top: 0;
+     left: 0;
+;}
+.hamburger::before,
+.hamburger::after,
+.hamburger > div{
+     height: 5px;
+     margin: 7px;
 
+     content: "";
+     display: block;
 
-
-@media screen and (orientation: portrait){
+     background-color: hsl(360, 100%, 35%);
+     border-radius: 10px;
+     transition: all  0.7s ease;
+}
+nav.active ~ .hamburger{
+          background-color: #fff;
+}
+nav.active ~ .hamburger::before{
+     transform: translateY(12px) rotate(315deg);
+     background-color: deeppink;
+}
+nav.active ~ .hamburger::after{
+     transform: translateY(-12px) rotate(-315deg);
+     background-color: deeppink;
+}
+nav.active ~ .hamburger > div{
+     transform: scale(0);
+}
+/* ********************transform */
+@media screen and (orientation: portrait) {
      nav.active + .container{
           transform: translateX(55%) scale(0.8);
-          box-shadow: 0 0 30px 5px rgba(38, 38, 38, 0.3);
      }
 }
 
-@media screen and (orientation: landscape){
+@media screen and (orientation: landscape) {
      nav.active + .container{
           transform: translateX(35%) scale(0.8);
-          box-shadow: 0 0 30px 5px rgba(38, 38, 38, 0.3);
      }
 }
