--- a/3D-NAV/Menu.css
+++ b/3D-NAV/Menu.css
@@ -1,15 +1,23 @@
 :root{
      --trans: 1150ms ease;
 }
+/* ********************************
+.                    CHECKBOX
+********************************* */
 .checkbox{
-     width: 50px;
-     height: 50px;
+     width: 40px;
+     height: 40px;
      background-color: red;
      position: absolute;
      top: 0;
      left: 0;
      z-index: 1000;
+     opacity: 0;
 }
+
+/* ********************************
+.         ANIMATION NAV+MAIN
+********************************* */
 .checkbox:checked{
      transform: translateX(15em);
 }
@@ -22,5 +30,46 @@
 }
 nav, main, input{
      transition: var(--trans);
+}
+/* ********************************
+.         ANIMATION HAMBURGER
+********************************* */
+.checkbox:checked ~  .hamburger {
+     transform: translateX(13em);
+
+}
+
+.checkbox:checked ~  .hamburger::before{
+     transform: translateY(12px) rotate(-135deg);
+}
+.checkbox:checked ~  .hamburger::after{
+     transform: translateY(-12px) rotate(135deg);
+}
+.checkbox:checked ~  .hamburger > div{
+     transform: scale(0);
+}
+/* ********************************
+.                   HAMBURGER
+********************************* */
+.hamburger{
+     width: 50px;
+     position: absolute;
+     top: 0;
+     left: 0;
+     z-index: 500;
+     transition: var(--trans);
+}
+.hamburger::before,
+.hamburger::after,
+.hamburger > div{
+     content: "";
+     display: block;
+
+     height: 5px;
+     margin: 7px;
+
+     background-color: #fff;
+     border-radius: 10px;
+     transition: 750ms ease;
 
 }
