--- a/3D-NAV/3D-Nav.css
+++ b/3D-NAV/3D-Nav.css
@@ -15,6 +15,10 @@ body{
      perspective: 800px;
      background: #21212d;
 }
+/* **********************************
+.             NAVBAR SECTION
+********************************** */
+
 nav{
      z-index: 100;
      position: absolute;
