--- a/Absorber-NAV/Absorber-NAV.css
+++ b/Absorber-NAV/Absorber-NAV.css
@@ -16,7 +16,7 @@ body{
      margin: 0;
      padding: 0;
      box-sizing: border-box;
-     font-family: tahoma,  sans-seriff;
+     font-family: Dosis, tahoma,  sans-serif;
 }
 
 /* **********************************
